# purple-devops-ai

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  build.rs  ci.sh  demo.webm  deny.toml  llms.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: api-changelog.yml  ci.yml  release.yml  site.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ssh_config.rs
fuzz/seed_corpus/fuzz_ssh_config/: 01_vault_ssh_basic.conf  02_match_block_with_cert.conf  03_include_chain.conf  04_provider_metadata.conf  05_pattern_and_wildcard.conf  06_crlf_and_tabs.conf  07_crlf_line_endings.conf  08_empty_and_comments.conf  09_vault_addr_comment.conf  README.md
mcpb/: manifest.template.json
scripts/: build-mcpb.sh  check-api-changelogs.sh  check-design-system.sh  check-keybindings.sh  check-messages.sh  update-golden.sh
scripts/site/: check-sync.sh  sync.mjs  sync.sh
site/: install.sh  page.html  worker.ts
src/: animation.rs  app.rs  askpass.rs  askpass_env.rs  askpass_tests.rs  changelog.rs  changelog_tests.rs  cli.rs  cli_args.rs  clipboard.rs  connection.rs  containers.rs  containers_tests.rs  demo.rs  demo_flag.rs  event.rs  file_browser.rs  file_browser_tests.rs  fs_util.rs  handler.rs  history.rs  import.rs  lib.rs  logging.rs  main.rs  main_tests.rs  mcp.rs  mcp_tests.rs  messages.rs  onboarding.rs  ping.rs  preferences.rs  quick_add.rs  snippet.rs  snippet_tests.rs  ssh_context.rs  ssh_keys.rs  tui.rs  tui_loop.rs  tunnel.rs  (+5 more)
src/app/: baselines.rs  container_state.rs  display_list.rs  form_state.rs  forms.rs  groups.rs  host_state.rs  hosts.rs  ping.rs  provider_state.rs  reload_state.rs  screen.rs  search.rs  selection.rs  snippet_state.rs  status_state.rs  tag_state.rs  tests.rs  tunnel_state.rs  ui_state.rs  update.rs  vault.rs
src/handler/: bulk_tag_editor.rs  command_palette.rs  confirm.rs  containers.rs  event_loop.rs  file_browser.rs  help.rs  host_detail.rs  host_form.rs  host_list.rs  picker.rs  ping.rs  provider.rs  (+7 more)
tests/: contract_snapshots.rs  mcp_e2e.rs  openssh_ground_truth.rs  proptest_mutations.rs  proptest_ssh_config.rs  real_world_configs.rs  roundtrip_fidelity.rs  schema_validation.rs  smoke_tui.sh  vault_ssh_config_safety.rs
(+174 files in other folders)
